[package]
name = "lit-cli"
version = "0.1.0"
edition = "2021"
description = "CLI frontend for the lit filesystem"
license = "MIT OR Apache-2.0"
build = "build.rs"

[[bin]]
name = "lit"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
libc = "0.2"
futures = "0.3"
hex = "0.4"
mime_guess = "2"
prost = "0.13"
prost-types = "0.13"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
whoami = "1"
which = "5"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
