[package]
name = "lit-cli"
version = "0.1.0"
edition = "2021"
description = "CLI frontend for the lit filesystem"
license = "MIT OR Apache-2.0"
build = "build.rs"

[[bin]]
name = "lit"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
futures = "0.3"
hex = "0.4"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
prost = "0.13"
prost-types = "0.13"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
whoami = "1"
which = "5"
lit-crdt = { path = "../lit-crdt" }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
