[package]
name = "lit-relay"
version = "0.1.0"
edition = "2021"
description = "gRPC relay server for the lit filesystem"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
lit-storage = { path = "../lit-storage" }
prost = "0.13"
prost-types = "0.13"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
