[package]
name = "lit-storage"
version = "0.1.0"
edition = "2021"
description = "Storage abstraction layer for the lit filesystem"
license = "MIT OR Apache-2.0"

[features]
default = ["fs", "mem"]
fs = []
mem = []
s3 = ["aws-sdk-s3"]

[dependencies]
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
bytes = "1"
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["rt-tokio"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
